--- a/index.html
+++ b/index.html
@@ -195,5 +195,52 @@
       </div>
      </div>
     </section>
+    
+    <section class="links">
+     <div class="links-block">
+      <div class="links-media__btn">
+       <button type="submit" class="links-media__btn"><img src="src/img/footer/Exclude.png" alt="#"></button>
+      </div>
+      <div class="links-media__btn">
+       <button type="submit" class="links-media__btn"><img src="src/img/footer/discord.png" alt="#"></button>
+      </div>
+      <div class="links-media__btn">
+       <button type="submit" class="links-media__btn"><img src="src/img/footer/X icon.png" alt="#"></button>
+      </div>
+      <div class="links-media__btn">
+       <button type="submit" class="links-media__btn"><img src="src/img/footer/Vector.png" alt="#"></button>
+      </div>
+      <div class="links-media__btn">
+       <button type="submit" class="links-media__btn"><img src="src/img/footer/vector-1.png" alt="#"></button>
+      </div>
+     </div>
+    </section>
+
+    <section class="footer">
+     <div class="footer-block">
+      <div class="footer-block__community">
+       <div class="footer-community__title">Join the Community</div>
+       <div class="footer-communtiy__social">
+        <div class="social-media__button">
+         <button type="submit" class="social-media__btn"><img src="src/img/footer/Exclude.png" alt="#"></button>
+         <button type="submit" class="social-media__btn"><img src="src/img/footer/discord.png" alt="#"></button>
+         <button type="submit" class="social-media__btn"><img src="src/img/footer/X icon.png" alt="#"></button>
+         <button type="submit" class="social-media__btn"><img src="src/img/footer/Vector.png" alt="#"></button>
+         <button type="submit" class="social-media__btn"><img src="src/img/footer/vector-1.png" alt="#"></button>
+        </div>
+       </div>
+      </div>
+      <div class="footer-block__nav">
+       <div class="footer-nav__title">Navigation</div>
+       <div class="footer-nav__row"><a href="">Community</a></div>
+       <div class="footer-nav__row"><a href="">Ecosystem</a></div>
+       <div class="footer-nav__row"><a href="">News</a></div>
+      </div>
+      <div class="footer-block__created">
+       <div class="footer-author__title">Created by</div>
+       <div class="footer-author__link"><a href="">@Leo J</a></div>
+      </div>
+     </div>
+    </section>
 </body>
 </html>
