--- a/index.html
+++ b/index.html
@@ -216,6 +216,69 @@
      </div>
     </section>
 
+    <section class="news">
+        <div class="news-block">
+         <div class="news-block__title">News</div>
+         <div class="news-block__subtitle"> Stay up to date with all market events</div>
+
+         <div class="news-block__cards">
+         <div class="news-block__wrapper">
+          <div class="news-wrapper__content">
+          <div class="news-wrapper__img">
+           <img src="src/img/news/news1.png" alt="#">
+          </div>
+          <div class="news-wrapper__text">
+           <div class="news-wrapper__title">Daily Analysis: BTC, ETH, BONE, BAKE, LPT</div>
+           <div class="news-wrapper__subtitle">26.08.2023</div>
+           </div>
+          </div>
+         </div>
+         <div class="news-block__wrapper">
+          <div class="news-wrapper__content">
+          <div class="news-wrapper__img">
+           <img src="src/img/news/news2.png" alt="#">
+          </div>
+          <div class="news-wrapper__text">
+           <div class="news-wrapper__title">Daily Analysis: BTC, ETH, BONE, BAKE, LPT</div>
+           <div class="news-wrapper__subtitle">25.08.2023</div>
+           </div>
+          </div>
+         </div>
+        </div>
+        </div>
+        <div class="news-block news-block__two">
+            <div class="news-block__cards">
+            <div class="news-block__wrapper">
+             <div class="news-wrapper__content">
+             <div class="news-wrapper__img">
+              <img src="src/img/news/news1.png" alt="#">
+             </div>
+             <div class="news-wrapper__text">
+              <div class="news-wrapper__title">Daily Analysis: BTC, ETH, BONE, BAKE, LPT</div>
+              <div class="news-wrapper__subtitle">26.08.2023</div>
+              </div>
+             </div>
+            </div>
+            <div class="news-block__wrapper">
+             <div class="news-wrapper__content">
+             <div class="news-wrapper__img">
+              <img src="src/img/news/news2.png" alt="#">
+             </div>
+             <div class="news-wrapper__text">
+              <div class="news-wrapper__title">Daily Analysis: BTC, ETH, BONE, BAKE, LPT</div>
+              <div class="news-wrapper__subtitle">25.08.2023</div>
+              </div>
+             </div>
+            </div>
+           </div>
+           </div>
+           <button class="btn-news">View more</button>
+
+       </section>
+
+      
+
+
     <section class="footer">
      <div class="footer-block">
       <div class="footer-block__community">
